--- a/package.json
+++ b/package.json
@@ -1,1 +1,22 @@
-{}
+{
+  "name": "nodejs",
+  "description": "Practica de tutoriales basicos en Node.js",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diegoaaron/nodejs.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/diegoaaron/nodejs/issues"
+  },
+  "homepage": "https://github.com/diegoaaron/nodejs#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
