--- a/tutorial_02/package.json
+++ b/tutorial_02/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "segundo tutorial de node",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/app.js",
     "dev": "node src/app.js"
