--- a/tutorial_02/package.json
+++ b/tutorial_02/package.json
@@ -11,6 +11,7 @@
   "author": "diego",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "node-fetch": "^3.3.0"
   }
 }
