--- a/tutorial_02/package.json
+++ b/tutorial_02/package.json
@@ -6,12 +6,16 @@
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "node src/app.js"
+    "dev": "nodemon src/index.js"
   },
   "author": "diego",
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
