--- a/tutorial_03/package.json
+++ b/tutorial_03/package.json
@@ -2,9 +2,8 @@
   "name": "tutorial_03",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,5 +11,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
