--- a/tutorial_04/package.json
+++ b/tutorial_04/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error:"
+    "test": "echo Error:"
   },
   "keywords": [],
   "author": "",
