--- a/tutorial_04/package.json
+++ b/tutorial_04/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo Error:"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
