--- a/tutorial_05/package.json
+++ b/tutorial_05/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": ""
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
